# Hamming-Code

./: Cargo.toml  README.md  decoder.js  encoder.html  encoder.js  encoder.ts  index.html  package.json  tsconfig.json
decoder/src/: main.rs
src/: lib.rs
